--- a/css/custom.css
+++ b/css/custom.css
@@ -12,6 +12,7 @@
 #captcha #captcha_reload {margin:0;padding:0;width:40px;height:40px;border:0;background:transparent;vertical-align:middle;overflow:hidden;cursor:pointer;background:url('../../../img/captcha2.png') no-repeat  0 -40px;text-indent:-999px;border-radius:3px}
 #captcha #captcha_key {margin:0 0 0 3px;padding:0 5px;width:90px;height:40px;border:1px solid #ccc;background:#fff;font-size:1.333em;font-weight:bold;text-align:center;border-radius:3px;vertical-align:top}
 #captcha #captcha_info {display:block;margin:5px 0 0;font-size:80%;color:#ff0000;letter-spacing:-0.1em}
+@media (max-width: 575px) {	#captcha_audio {display:none !important;} }
 
 /* 커스텀 */
 a { text-decoration: none; }
@@ -23,10 +24,11 @@ select { font-size: 14px; }
 #latest h4 a:hover { text-decoration: none; }
 #latest li a { color: #777; }
 
-.dropdown-item { font-size: 14px; }
+.pagination { margin-top: 0rem; margin-bottom: 0rem; }
 
 .ck.ck-editor__editable { min-height: 200px !important; }
 
 /*
+.dropdown-item { font-size: 1rem; }
 .title { white-space: nowrap; text-overflow: ellipsis; overflow: hidden; width: 100%; }
 */
