--- a/skin/board/gallery/custom.css
+++ b/skin/board/gallery/custom.css
@@ -2,7 +2,7 @@
 
 /* 게시판 쓰기 */
 #autosave_wrapper {position:relative; font-size:14px;}
-#autosave_pop {display:none;z-index:10;position:absolute !important;top:34px;right:0;width:350px;height:auto !important;height:180px;max-height:180px;border:1px solid #565656;background:#fff;
+#autosave_pop {display:none;z-index:10;position:absolute !important;top:34px;right:0;width:100%;height:auto !important;height:180px;max-height:205px;border:1px solid #565656;background:#fff;
 -webkit-box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.2);
 -moz-box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.2);
 box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.2);}
@@ -12,7 +12,7 @@ html.no-overflowscrolling #autosave_pop {height:auto;max-height:10000px !importa
 #autosave_pop strong {position:absolute;font-size:0;line-height:0;overflow:hidden}
 #autosave_pop div {text-align:center;margin:0 !important;}
 #autosave_pop button {margin:0;padding:0;border:0;}
-#autosave_pop ul {margin:0px;padding:15px;border-top:1px solid #e9e9e9;list-style:none;overflow-y:scroll;height:130px;border-bottom:1px solid #e8e8e8}
+#autosave_pop ul {margin:0px;padding:15px;border-top:1px solid #e9e9e9;list-style:none;overflow-y:scroll;height:156px;border-bottom:1px solid #e8e8e8}
 #autosave_pop li {padding:8px 5px;border-bottom:1px solid #fff;zoom:1}
 #autosave_pop li:after {display:block;visibility:hidden;clear:both;content:""}
 #autosave_pop a {display:block;float:left}
@@ -20,7 +20,7 @@ html.no-overflowscrolling #autosave_pop {height:auto;max-height:10000px !importa
 .autosave_close {cursor:pointer;width:100%;height:30px;background:none;color:#888;font-weight:bold;font-size:0.92em}
 .autosave_close:hover{background:#f3f3f3;color:#3597d9}
 .autosave_content {display:none}
-.autosave_del{background:url(./img/close_btn.png) no-repeat 50% 50%;text-indent:-999px;overflow:hidden;height:20px;width:20px;}
+.autosave_del{background:url(./img/close_btn.png) no-repeat 50% 50%;text-indent:-999px;overflow:hidden;height:26px;width:20px;}
 
 .cke_sc { display:none; }
 
